# aserto-python

./: .gitattributes  .gitignore  DEVELOPER.md  Depfile  LICENSE  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yaml  gitleaks-check.yml
magefiles/: go.mod  go.sum  magefile.go
src/aserto/client/: _deadline.py  _typing.py  identity.py  options.py
src/aserto/client/authorizer/: __init__.py  helpers.py
src/aserto/client/authorizer/aio/: __init__.py
src/aserto/client/directory/: __init__.py  channels.py
src/aserto/client/directory/aio/: __init__.py
src/aserto/client/directory/v2/: __init__.py
src/aserto/client/directory/v3/: __init__.py  helpers.py
src/aserto/client/directory/v3/aio/: __init__.py
test/: conftest.py  test_authorizer.py  test_authorizer_async.py  test_directory_v2.py  test_directory_v2_async.py  test_directory_v3.py  test_directory_v3_async.py
test/assets/: manifest.yaml
