[tool.poetry]
name = "aserto"
version = "0.31.1"
description = "Aserto API client"
readme = "README.md"
authors = ["Aserto, Inc. <pypi@aserto.com>"]
maintainers = ["authereal <authereal@aserto.com>"]
homepage = "https://github.com/aserto-dev/aserto-python/tree/HEAD"
repository = "https://github.com/aserto-dev/aserto-python/tree/HEAD"
documentation = "https://github.com/aserto-dev/aserto-python/tree/HEAD"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
packages = [
    {include = "aserto", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.0"
grpcio = "^1.49.0"
protobuf = "^4.21.0"
aserto-authorizer = "^0.20.2"
aserto-directory = "^0.31.3"

[tool.poetry.dev-dependencies]
black = "^23.0"
isort= "^5.9.0"
pytest-asyncio = "^0.15.0"
pyright = "^1.1.0"
requests = "^2.31.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

